# jsbm.dev

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE-APACHE  Makefile.toml  README.md  _.dev.vars  _wrangler.toml  docker-compose.yml  wrangler.toml
.github/workflows/: ci.yml  deploy.yml  docker.yml
.sqlx/: query-0a7d9181f68c17b127e98b93e2ee627309710dcc3fbcc4512c1f547d5c9529b1.json  query-8cfc0fc5de6ef323a99c26405107e74718be44bdda10a2283bc6fd06442c4632.json  query-94c45d8cd456dbab107c17b7fbd0abfdeb69102c933da8e9d00764d2fbe1942b.json
migrations/: 0000_init.sql  20240202155357_init.sql
src/: error.rs  lib.rs  main.rs  model.rs  ser.rs  utils.rs
src/routes/: create.rs  select.rs
