[package]
name = "jsbm-dev"
version = "0.1.0"
description = "Benchmark storage and redirecting Cloudflare Worker for JSBenchmark.com"
license = "MIT-OR-Apache-2.0"
authors = ["Carter Himmel <me@fyko.net>"]
repository = "https://github.com/jsbenchmark/jsbm.dev"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "1"
serde = "1.0.188"
worker = { git = "https://github.com/cloudflare/workers-rs", ref = "c57f7a6", features = [
	"tokio-postgres",
	"d1",
] }
tokio-postgres = { version = "0.7", features = [
	'js',
], default-features = false }
wasm-bindgen = "=0.2.87"
console_error_panic_hook = { version = "0.1", optional = true }
indoc = "2.0.4"
http = "1.0.0"
serde_json = "1.0.111"
base64 = "0.21.7"
time = { version = "0.3", features = ["wasm-bindgen"] }
serde_repr = "0.1.18"
rand = "0.8.5"

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"
