[package]
name = "jsbm-dev"
version = "0.2.0"
description = "Benchmark storage and redirecting Cloudflare Worker for JSBenchmark.com"
license = "MIT OR Apache-2.0"
authors = ["Carter Himmel <me@fyko.net>"]
repository = "https://github.com/jsbenchmark/jsbm.dev"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
indoc = "2.0.4"
http = "1.0.0"
serde_json = "1.0.111"
base64 = "0.21.7"
rand = "0.8.5"
axum = { version = "0.7.4", features = ["tracing", "macros"] }
tokio = { version = "1.36.0", features = [
	"rt-multi-thread",
	"macros",
	"sync",
	"signal",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
	"fmt",
	"env-filter",
	"json",
] }
tower-http = { version = "0.5.1", features = [
	"timeout",
	"trace",
	"request-id",
] }
sqlx = { version = "0.7.3", features = [
	"runtime-tokio",
	"tls-rustls",
	"postgres",
] }
